# basic-cmake

./: .gitignore  LICENSE  README.md
myapp-avr/: CMakeLists.txt  README.md  install-avr.sh
myapp-avr/src/: main.cpp
myapp-unix/: CMakeLists.txt  README.md
myapp-unix/src/: main.cpp
mylib/: CMakeLists.txt  README.md  install-avr.sh
mylib/cmake/: ARDUINO_UNO.cmake  MyLibConfig.cmake.in
mylib/include/mylib/: mylib.h
mylib/src/: mylib.cpp
